--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.14.5",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "babel-plugin-root-import": "^6.6.0",
