--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.0",
+    "@expo-google-fonts/pt-serif": "^0.2.0",
     "@react-navigation/native": "^6.0.0",
     "@react-navigation/stack": "^6.0.0",
     "expo": "~42.0.1",
